--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,10 +2,22 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>pleasesquash.it</title>
+    <title>pleasesquash.me</title>
+    <link rel="stylesheet" href="/style.css" />
+    <link href='https://fonts.googleapis.com/css?family=Raleway:400,700,200' rel='stylesheet' type='text/css'>
   </head>
   <body>
+    <h1 class="header">
+      <a href="/">pleasesquash<img class="logo" src="/squash.png" />me</a>
+    </h1>
     {{ template "content" }}
+    <footer>
+      <p>
+        made with
+        <span class="red">&hearts;</span>
+        by <a href="http://codequest.com">codequest</a>
+      </p>
+    </footer>
   </body>
 </html>
 {{ end }}
