--- a/templates/success.html
+++ b/templates/success.html
@@ -1,3 +1,10 @@
 {{ define "content" }}
-<h1>All good!</h1>
+<h2 class="green">Success!</h2>
+<p>
+  You're almost there but before you can enjoy your newly implemented checks you
+  will need to add a webhook to your repo. The webhook endpoint is:
+</p>
+<p class="webhook green">https://pleasesquash.me/webhook</p>
+<p>And here is how you add it:</p>
+<img class="screenshot" alt="GitHub screenshot" src="/github.png" />
 {{ end }}
