--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,9 @@
   guided through the rest of the setup (which involves one extra step) after
   submitting the form below.
 </p>
-<p>Want to give it a try?</p>
+<p class="question">Want to give it a try?</p>
 <form action="/submit" method="POST">
   <input type="text" name="repo_name" placeholder="codequest-eu/pleasesquash.me" />
-  <button>Go!</button>
+  <button>Squash it!</button>
 </form>
 {{ end }}
