--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,21 +3,25 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>pleasesquash.me</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/stylesheet/normalize.css" />
+    <link rel="stylesheet" href="/stylesheet/style.css" />
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,700,200' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <h1 class="header">
-      <a href="/">pleasesquash<img class="logo" src="/squash.png" />me</a>
-    </h1>
-    {{ template "content" }}
-    <footer>
-      <p>
-        made with
-        <span class="red">&hearts;</span>
-        by <a href="http://codequest.com">codequest</a>
-      </p>
-    </footer>
+    <img class="logo" src="/stylesheet/svg/logo.svg" alt="logo"/>
+    <div class="wrapper">
+      <h1 class="header">
+        <a href="/">Squash me before commit</a>
+      </h1>
+     {{ template "content" }}
+      <footer>
+        <p>
+          made with
+          <span class="red">&hearts;</span>
+          by <a href="http://codequest.com">codequest</a>
+        </p>
+      </footer>
+  </div>
   </body>
 </html>
 {{ end }}
