Stylig landing page

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,6 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>pleasesquash.me</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/stylesheet/normalize.css" />
     <link rel="stylesheet" href="/stylesheet/style.css" />
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,700,200' rel='stylesheet' type='text/css'>
@@ -14,6 +15,7 @@
         <a href="/">Squash me before commit</a>
       </h1>
      {{ template "content" }}
+     <img class="graf" src="/stylesheet/svg/graf.svg" alt="logo"/>
       <footer>
         <p>
           made with
