--- a/static/stylesheet/style.css
+++ b/static/stylesheet/style.css
@@ -19,10 +19,12 @@ body {
   font-weight: 28px;
   color: #263238;
   background-color: #fff;
+  position: relative;
  }
 
 .logo {
-  margin-left: 10px;
+  margin-left: 20px;
+  margin-top: 20px;
 }
 
 p {
@@ -77,8 +79,6 @@ input[type=text], button {
   display: block;
   max-width: 600px;
   height: 56px; 
-  border: 2px solid #cfd8dc;
-  border-radius: 100px;
 }
 
 input[type=text] {
@@ -87,11 +87,14 @@ input[type=text] {
   display: block;
   padding-left: 20px;
   margin: 20px auto 0;
+  border: 2px solid #cfd8dc;
+  border-width: 0 0 2px 0;
  }
 
 input[type=text]:focus {
   outline: none;
-  border-color: #fdd835;
+  border: 2px solid #263238;
+  border-width: 0 0 2px 0;
 }
 
 button {
@@ -106,6 +109,18 @@ button {
   margin: 20px auto 0;
   max-width: 300px;
   height: 56px; 
+}
+
+@media screen and (max-width: 1300px) and (-webkit-min-device-pixel-ratio: 1) { 
+  .graf {
+    display: none;
+  }
+}
+
+.graf {
+  position: absolute;
+  bottom: 0;
+  right: 15px;
 }
 
 .webhook {
