--- a/templates/error.html
+++ b/templates/error.html
@@ -1,5 +1,5 @@
 {{ define "content" }}
-<h2 class="red">Sorry!</h2>
+<h1 class="title">Sorry!</h1>
 <p>
   Obviously, something went wrong. Most likely you do not have access to the
   repo you were trying to set up. Alternatively, there may be no <em>master</em>
@@ -8,4 +8,5 @@
   exists we can't tell the difference between that corner case and missing repo
   access.
 </p>
+<img class="picture" src="svg/04.svg" alt="picture">
 {{ end }}
