--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,43 @@
 {{ define "content" }}
+<h1 class="title">
+  Squash me before pull request!
+</h1>
 <p>
   This is a simple tool to allow having GitHub pull requests marked as success
   or failure based on whether commits have been squashed or not. The idea is to
   only merge fully squashed PRs to keep the project log nice and clean.
 </p>
-<p>
-  In order to achieve that you need to provide your full GitHub repo name - eg.
-  <em>codequest-eu/pleasesquash.me</em> and grant the tool access to your GitHub
-  statuses. This <em>will not</em> grant access to your source code. You will be
-  guided through the rest of the setup (which involves one extra step) after
-  submitting the form below.
-</p>
-<p>Want to give it a try?</p>
+<h2>Want to give it a try?</h2>
 <form action="/submit" method="POST">
-  <input type="text" name="repo_name" placeholder="codequest-eu/pleasesquash.me" />
-  <button>Go!</button>
+  <input class="adress" type="text" name="repo_name" placeholder="codequest-eu/pleasesquash.me" />
+  <button class="squash">Squash it!</button>
 </form>
+<ul class='icons-container'>
+      <li>
+        <img class="icon-svg" src="svg/01.svg" alt="Get commits" 
+        style="width:150px;height:150px;">
+        <h3>Get commits</h3>
+        <p> In order to squash your last three commits in one and type following command</p>
+        <p class="code">
+          git rebase -i HEAD~3
+        </p>
+        <p>This will open up your editor with the following</p>
+      </li>
+      <li>
+        <img class="icon-svg" src="svg/02.svg" alt="Squash it" 
+        style="width:150px;height:150px;">
+        <h3>Squash it</h3>
+        <p> Change your file to this:</p>
+        <p class="code">
+          pick f392171 Added new feature X squash ba9dd9a Added new elements to page design squash df71a27 Updated CSS for new elements
+        </p>
+        <p>When done, save and quit your editor. Git will now squash the commits into one. All done!</p>
+      </li>
+      <li>
+        <img class="icon-svg" src="svg/03.svg" alt="Enjoy" 
+        style="width:150px;height:150px;">
+        <h3>Enjoy</h3>
+        <p> Now you can relax, open bottle of wine and enjoy that your history of commits look pretty.</p>
+      </li>
+    </ul>
 {{ end }}
