--- a/templates/success.html
+++ b/templates/success.html
@@ -1,5 +1,5 @@
 {{ define "content" }}
-<h2 class="green">Success!</h2>
+<h1 class="success">Success!</h1>
 <p>
   You're almost there but before you can enjoy your newly implemented checks you
   will need to add a webhook to your repo. The webhook endpoint is:
