--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/normalize.css" />
     <link rel="stylesheet" href="/style.css" />
     <link rel="stylesheet" href="/style_tablet.css" />
-    <link href='https://fonts.googleapis.com/css?family=Raleway:400,700,200' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lato:400,700,300' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div class="header">
