--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,12 +1,13 @@
 {{ define "layout" }}
 <html>
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>pleasesquash.me</title>
     <link rel="stylesheet" href="/normalize.css" />
     <link rel="stylesheet" href="/style.css" />
     <link rel="stylesheet" href="/style_tablet.css" />
     <link href='https://fonts.googleapis.com/css?family=Lato:400,700,300' rel='stylesheet' type='text/css'>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta content="initial-scale=1.0, user-scalable=no, maximum-scale=1, width=device-width, minimal-ui" name="viewport">
   </head>
   <body>
     <div class="header">
@@ -29,7 +30,7 @@
         by <a href="http://codequest.com">codequest</a>
         and <image class="like" src="svg/like.svg" alt="like" 
           style="width:17px;height:16px;">
-        by <a href="http://codebeat.com">codebeat</a>
+        by <a href="http://codebeat.co">codebeat</a>
       </p>
     </footer>
     </div>
