--- a/templates/index.html
+++ b/templates/index.html
@@ -17,25 +17,25 @@
         <img class="icon-svg" src="svg/01.svg" alt="Get commits" 
         style="width:150px;height:150px;">
         <h3>Get commits</h3>
-        <p> In order to squash your last three commits in one and type following command</p>
+        <p class="description"> In order to squash your last three commits in one and type following command</p>
         <p class="code">git rebase -i HEAD~3</p>
-        <p>This will open up your editor with the following</p>
+        <p class="description">This will open up your editor with the following</p>
       </li>
       <li>
         <img class="icon-svg" src="svg/02.svg" alt="Squash it" 
         style="width:150px;height:150px;">
         <h3>Squash it</h3>
-        <p> Change your file to this:</p>
+        <p class="description">Change your file to this:</p>
         <p class="code">pick f392171 Added new feature</p>
         <p class="code">squash ba9dd9a Added new elements to page design</p>
         <p class="code">squash df71a27 Updated CSS for new elements</p>
-        <p>When done, save and quit your editor. Git will now squash the commits into one. All done!</p>
+        <p class="description">When done, save and quit your editor. Git will now squash the commits into one. All done!</p>
       </li>
       <li>
         <img class="icon-svg" src="svg/03.svg" alt="Enjoy" 
         style="width:150px;height:150px;">
         <h3>Enjoy</h3>
-        <p> Now you can relax, open bottle of wine and enjoy that your history of commits look pretty.</p>
+        <p class="description"> Now you can relax, open bottle of wine and enjoy that your history of commits look pretty.</p>
       </li>
     </ul>
 {{ end }}
