--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,7 +16,7 @@
       <p class="github">
         <a class="visit" href="http://github.com/codequest-eu">Visit our GitHub</a>
         <image class="icon-github" src="svg/github.svg" alt="github" 
-          style="width:32px;height:32px;">
+          style="width:30px;margin-bottom:4px">
       </p>
       <div class="clearFix"></div>
     </div>
