--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,6 +9,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta content="initial-scale=1.0, user-scalable=no, maximum-scale=1, width=device-width, minimal-ui" name="viewport">
     <meta property="og:image" content="static/svg/pleasesquash.png" />
+    <meta property="og:url" content="http://pleasesquash.me" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Squash me before pull request!" />
+    <meta property="og:description" content="This is a simple tool to allow having GitHub pull requests marked as success or failure based on whether commits have been squashed or not. The idea is to only merge fully squashed PRs to keep the project log nice and clean." />
   </head>
   <body>
     <div class="header">
