change image tag

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,7 +8,7 @@
     <link href='https://fonts.googleapis.com/css?family=Lato:400,700,300' rel='stylesheet' type='text/css'>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta content="initial-scale=1.0, user-scalable=no, maximum-scale=1, width=device-width, minimal-ui" name="viewport">
-    <meta property="og:image" content="static/svg/pleasesquash.png" />
+    <meta property="og:image" content="http://pleasesquash.me/static/svg/pleasesquash.png" />
     <meta property="og:url" content="http://pleasesquash.me" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Squash me before pull request!" />
