--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,7 @@
   Squash me before pull request!
 </h1>
 <p>
-  This is a simple tool to allow having GitHub pull requests marked as success
-  or failure based on whether commits have been squashed or not. The idea is to
-  only merge fully squashed PRs to keep the project log nice and clean.
+  This is a simple tool to allow having GitHub pull requests marked as success or failure based on whether commits have been squashed or not. The basic idea is to squash couple of your previous commits into one. It’s a great way to group changes before sharing them with others. Thanks to that your commit history will be nice and clean. 
 </p>
 <h2>Want to give it a try?</h2>
 <form action="/submit" method="POST">
@@ -17,25 +15,28 @@
         <img class="icon-svg" src="svg/01.svg" alt="Get commits" 
         style="width:150px;height:150px;">
         <h3>Get commits</h3>
-        <p class="description"> In order to squash your last three commits in one and type following command</p>
+        <p class="description"> To squash your last three commits first type in</p>
         <p class="code">git rebase -i HEAD~3</p>
-        <p class="description">This will open up your editor with the following</p>
+        <p class="description">This will open up editor listing last three commits</p>
+        <p class="code">pick f392171 Added new feature X</p>
+        <p class="code">pick ba9dd9a Added new elements to page design</p>
+        <p class="code">pick df71a27 Updated CSS for new elements</p>
       </li>
       <li>
         <img class="icon-svg" src="svg/02.svg" alt="Squash it" 
         style="width:150px;height:150px;">
         <h3>Squash it</h3>
-        <p class="description">Change your file to this:</p>
-        <p class="code">pick f392171 Added new feature</p>
+        <p class="description">Then change it to:</p>
+        <p class="code">pick f392171 Added new feature X</p>
         <p class="code">squash ba9dd9a Added new elements to page design</p>
         <p class="code">squash df71a27 Updated CSS for new elements</p>
-        <p class="description">When done, save and quit your editor. Git will now squash the commits into one. All done!</p>
+        <p class="description">Now Your commits will be all squashed into one.</p>
       </li>
       <li>
         <img class="icon-svg" src="svg/03.svg" alt="Enjoy" 
         style="width:150px;height:150px;">
         <h3>Enjoy</h3>
-        <p class="description"> Now you can relax, open bottle of wine and enjoy that your history of commits look pretty.</p>
+        <p class="description">And that’s it. Now crack open a bottle of wine and gaze upon your perfectly clean project log.</p>
       </li>
     </ul>
 {{ end }}
